Changes in version: profileR_0.2-1

  * Fixed cp and pc functions. They weren’t working with missing data because of default na.action. This is fine now.

  * Fixed typos in manpages

  * Fixed plot for critpat class

Changes in version: profileR_0.2

  * Added pams(). This function adds profile analysis via multidimensional scaling. 
  
  * Add pbg(). This function tests parallel, level, and coincidential profiles across two groups.

  * Add additional generic functions to classes critpat and prof
  
  * Renamed functions to reduce conflict with base functions and to introduce a coding convention. 
  
 Changes in version: profileR_0.1
 
  * Initial CRAN release
