@@ -1,6 +1,8 @@
 #'@export
 
-profileplot <- function(form,person.id,interval=10,by.pattern=TRUE,original.names=TRUE) {
+profileplot <- function(form,person.id,standardize=TRUE,interval=10,by.pattern=TRUE,original.names=TRUE) {
+	
+	if(standardize) {form <- scale(form)}
 	
 	if(by.pattern) {
 	
@@ -110,7 +112,7 @@ profileplot <- function(form,person.id,interval=10,by.pattern=TRUE,original.name
     		else         {points(Scoresi, col=colouri,type="l")                                     }
     		lastxval <- length(Scoresi)
     		lastyval <- Scoresi[length(Scoresi)]
-    		text((lastxval-10),(lastyval),namei,col="black",cex=0.6)}
+    		text((lastxval),(lastyval),namei,col="black",cex=0.6)}
 	}
     return(plot1)
 }
